k8s/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: back
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        name: back
    spec:
      containers:
      - env:
        - name: ADMIN_API_TOKEN
          value: "1234"
        - name: JITSI_ISS
          value: ""
        - name: JITSI_URL
          value: cdd2021jitsi.cloud57.de
        - name: SECRET_JITSI_KEY
          value: ""
        - name: SECRET_KEY
          value: tempSecretKeyNeedsToChange
        - name: TURN_STATIC_AUTH_SECRET
          value: "1234"
        - name: MAX_PER_GROUP
          value: "6"
        image: thecodingmachine/workadventure-back:v1.3.15
        imagePullPolicy: Always
        name: back
        ports:
        - containerPort: 8080
          name: p8080
        - containerPort: 50051
          name: p50051
        resources:
          limits:
            memory: "4Gi"
            cpu: "2000m"
          requests:
            memory: "1Gi"
            cpu: "1000m"
