k8s/pusher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pusher
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: pusher
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        name: pusher
    spec:
      containers:
      - env:
        - name: ADMIN_API_TOKEN
          value: "1234"
        - name: API_URL
          value: back:50051
        - name: JITSI_ISS
          value: ""
        - name: JITSI_URL
          value: cdd2021jitsi.cloud57.de
        - name: SECRET_JITSI_KEY
          value: ""
        - name: SECRET_KEY
          value: tempSecretKeyNeedsToChange
        image: thecodingmachine/workadventure-pusher:v1.3.15
        imagePullPolicy: Always
        name: pusher
        ports:
        - containerPort: 8080
          name: p8080
        resources:
          limits:
            memory: "4Gi"
            cpu: "2000m"
          requests:
            memory: "1Gi"
            cpu: "1000m"
