k8s/coturn-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: coturn
  name: coturn
spec:
  ports:
  - name: coturn-p8080
    port: 8080
    targetPort: 8080
  selector:
    name: coturn
