k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: front
  name: front
spec:
  ports:
  - name: front-p80
    port: 80
    targetPort: 80
  selector:
    name: front
