k8s/pusher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pusher
  name: pusher
spec:
  ports:
  - name: pusher-p8080
    port: 8080
    targetPort: 8080
  selector:
    name: pusher
