k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: website
  name: website
spec:
  ports:
  - name: website-p80
    port: 80
    targetPort: 80
  selector:
    name: website
