k8s/front-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: front
spec:
  rules:
  - host: area42.eim.cloud-cenit.com
    http:
      paths:
      - backend:
          serviceName: front
          servicePort: front-p80
        path: /
