k8s/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
spec:
  rules:
  - host: cdd2021.eim.cloud-cenit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port: 
              number: 80
